--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -52,7 +52,7 @@
   width:fit-content;
   height: fit-content;
   border-radius: 5px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
   overflow: hidden;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
@@ -60,7 +60,7 @@
 
 .card:hover{
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
-  scale: 1.05;
+  transform: translateY(-10px);
 }
 
 .card img{
@@ -72,4 +72,70 @@
   text-align: center;
   padding: 10px;
   font-size: 20px;
+}
+
+.dots{
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  border-radius: 50%;
+  margin: 2px;
+  animation: loading 1s infinite ;
+  transition: 1s ease-in-out;
+}
+
+.dots:nth-child(2)
+{
+  animation-delay: 1s !important;
+}
+
+@keyframes loading {
+  50%{
+    transform: translateY(-5px);
+  }
+  
+  100%{
+    transform: translateY(0);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .gameboard-header{
+    flex-direction: column;
+    height: fit-content;
+    gap: 10px;
+  }
+  
+  .gameboard-header h1{
+    margin-bottom: 10px;
+  }
+  
+  .cards-container{
+    width: 100%;
+    align-items: center;
+    height: fit-content;
+  }
+
+  .card{
+    aspect-ratio: 1/1;
+    width: 25%;
+    margin: 5px;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+    height: fit-content;
+  }
+
+  .card:hover{
+    box-shadow:none;
+    transform: none;
+  }
+
+  .card img{
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .card h2{
+    font-size: 10px;
+  }
+
 }
